--- a/potovanja.ui
+++ b/potovanja.ui
@@ -35,7 +35,7 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QDateTimeEdit" name="txt_o_datum">
+           <widget class="QDateTimeEdit" name="txt_datum_odhoda">
             <property name="minimumSize">
              <size>
               <width>150</width>
@@ -65,10 +65,14 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QLineEdit" name="txt_o_kraj"/>
+           <widget class="QLineEdit" name="txt_kraj_odhoda">
+            <property name="text">
+             <string>txt_kraj_odhoda</string>
+            </property>
+           </widget>
           </item>
           <item row="2" column="2">
-           <widget class="QDateTimeEdit" name="txt_p_datum">
+           <widget class="QDateTimeEdit" name="txt_datum_prihoda">
             <property name="minimumSize">
              <size>
               <width>150</width>
@@ -91,10 +95,18 @@
            </widget>
           </item>
           <item row="1" column="2">
-           <widget class="QLineEdit" name="txt_p_kraj"/>
+           <widget class="QLineEdit" name="txt_kraj_prihoda">
+            <property name="text">
+             <string>txt_kraj_prihoda</string>
+            </property>
+           </widget>
           </item>
           <item row="3" column="2">
-           <widget class="QPlainTextEdit" name="txt_naslov"/>
+           <widget class="QPlainTextEdit" name="txt_naslov">
+            <property name="plainText">
+             <string>txt_naslov</string>
+            </property>
+           </widget>
           </item>
           <item row="3" column="0">
            <widget class="QLabel" name="label_7">
@@ -122,7 +134,11 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QLineEdit" name="txt_kilometri"/>
+           <widget class="QLineEdit" name="txt_kilometri">
+            <property name="text">
+             <string>txt_kilometri</string>
+            </property>
+           </widget>
           </item>
           <item row="1" column="1">
            <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -142,7 +158,7 @@
             <item>
              <widget class="QCheckBox" name="txt_povratek">
               <property name="text">
-               <string/>
+               <string>txt_povratek</string>
               </property>
              </widget>
             </item>
@@ -166,10 +182,24 @@
         <item row="0" column="0">
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
-           <widget class="QLineEdit" name="txt_id"/>
+           <widget class="QLineEdit" name="txt_id">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>txt_id</string>
+            </property>
+           </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="txt_stnaloga"/>
+           <widget class="QLineEdit" name="txt_stevilka_naloga">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>txt_stevilka_naloga</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -252,11 +282,11 @@
  </widget>
  <tabstops>
   <tabstop>txt_id</tabstop>
-  <tabstop>txt_stnaloga</tabstop>
-  <tabstop>txt_o_kraj</tabstop>
-  <tabstop>txt_p_kraj</tabstop>
-  <tabstop>txt_o_datum</tabstop>
-  <tabstop>txt_p_datum</tabstop>
+  <tabstop>txt_stevilka_naloga</tabstop>
+  <tabstop>txt_kraj_odhoda</tabstop>
+  <tabstop>txt_kraj_prihoda</tabstop>
+  <tabstop>txt_datum_odhoda</tabstop>
+  <tabstop>txt_datum_prihoda</tabstop>
   <tabstop>txt_naslov</tabstop>
   <tabstop>txt_kilometri</tabstop>
   <tabstop>txt_povratek</tabstop>
