Uporabnik preimenovan v zaposlenega
Uporabnik je bilo mišljeno uporabnik programa. Za potrebe podjetja je
bolj smiselno uporabiti naziv zaposleni. Trenutno je poimenovanje še malce
nerodno, saj bi bilo smiselno uporabiti tudi naziv uslužbenec.
TODO: določiti, kje se bo uporabil naziv uslužbenec.

--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -193,8 +193,9 @@
     <property name="title">
      <string>Nastavitve</string>
     </property>
-    <addaction name="actionUporabniki"/>
     <addaction name="actionPodjetje"/>
+    <addaction name="actionUporabniki"/>
+    <addaction name="separator"/>
     <addaction name="action_asovnice"/>
    </widget>
    <addaction name="menuDelo"/>
@@ -251,7 +252,7 @@
   </action>
   <action name="actionUporabniki">
    <property name="text">
-    <string>Uporabniki</string>
+    <string>Zaposleni</string>
    </property>
   </action>
   <action name="actionPodjetje">
