--- a/uporabnik.ui
+++ b/uporabnik.ui
@@ -23,7 +23,7 @@
    <enum>Qt::StrongFocus</enum>
   </property>
   <property name="windowTitle">
-   <string>BenRačun: Urejanje uporabnika</string>
+   <string>BenRačun: Urejanje zaposlenega</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_4">
    <item row="0" column="0">
