--- a/podjetje.ui
+++ b/podjetje.ui
@@ -80,7 +80,7 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>0</y>
+            <y>-178</y>
             <width>596</width>
             <height>723</height>
            </rect>
@@ -393,14 +393,14 @@
                 <item row="2" column="0">
                  <widget class="QLabel" name="label_4">
                   <property name="text">
-                   <string>Poštna št.</string>
+                   <string>Pošta</string>
                   </property>
                  </widget>
                 </item>
                 <item row="2" column="1">
                  <widget class="QLabel" name="label_7">
                   <property name="text">
-                   <string>Pošta</string>
+                   <string>Poštna številka</string>
                   </property>
                  </widget>
                 </item>
